[project]
name = "brainstore-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-otel>=0.7.1",
    "arize>=7.31.1",
    "openinference-semantic-conventions>=0.1.12",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "python-dotenv>=1.0.1",
    "braintrust>=0.0.181",
    "langsmith>=0.2.10",
    "boto3>=1.36.0",
    "psycopg2-binary>=2.9.10",
]
